[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialogic/Documentation/Nodes/DocsPageViewer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialogic/Documentation/Nodes/DocumentationTree.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dialogic/Documentation/Nodes/DocumentationViewer.gd" type="Script" id=3]

[node name="DocumentationViewer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplit" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplit"]
margin_right = 230.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilterEntry" type="LineEdit" parent="HSplit/VBoxContainer"]
margin_right = 230.0
margin_bottom = 24.0
placeholder_text = "Filter Documentation"
placeholder_alpha = 0.502

[node name="DocumentationTree" parent="HSplit/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 230.0

[node name="DocsPageViewer" parent="HSplit" instance=ExtResource( 1 )]
margin_left = 242.0
size_flags_horizontal = 3

[connection signal="text_changed" from="HSplit/VBoxContainer/FilterEntry" to="." method="_on_FilterEntry_text_changed"]
[connection signal="open_non_html_link" from="HSplit/DocsPageViewer" to="." method="_on_DocsPageViewer_open_non_html_link"]
